--- a/addins/MonoDevelop/AutoTest.MDAddin/AutoTest.MDAddin.csproj
+++ b/addins/MonoDevelop/AutoTest.MDAddin/AutoTest.MDAddin.csproj
@@ -33,7 +33,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\.local\share\MonoDevelop-4.0\LocalInstall\Addins</OutputPath>
+    <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
