--- a/src/AutoTest.TestRunner/AutoTest.TestRunners/AutoTest.TestRunners.csproj
+++ b/src/AutoTest.TestRunner/AutoTest.TestRunners/AutoTest.TestRunners.csproj
@@ -31,7 +31,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
     <OutputPath>bin\Debug\</OutputPath>
-    <DebugType>full</DebugType>
+    <DebugType>none</DebugType>
     <WarningLevel>4</WarningLevel>
     <Optimize>false</Optimize>
     <DefineConstants>TRACE;DEBUG</DefineConstants>
