--- a/src/AutoTest.TestRunner/Plugins/AutoTest.TestRunners.MSpec.Tests.TestResource/AutoTest.TestRunners.MSpec.Tests.TestResource.csproj
+++ b/src/AutoTest.TestRunner/Plugins/AutoTest.TestRunners.MSpec.Tests.TestResource/AutoTest.TestRunners.MSpec.Tests.TestResource.csproj
@@ -48,10 +48,6 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Machine.Specifications, Version=0.3.0.0, Culture=neutral, PublicKeyToken=5c474de7a495cff1, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\lib\MSpec5\Machine.Specifications.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -59,6 +55,9 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Machine.Specifications">
+      <HintPath>..\..\..\..\lib\MSpec5\Machine.Specifications.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Can_add_numbers.cs" />
