--- a/src/AutoTest.TestRunner/Plugins/AutoTest.TestRunners.NUnit/AutoTest.TestRunners.NUnit.csproj
+++ b/src/AutoTest.TestRunner/Plugins/AutoTest.TestRunners.NUnit/AutoTest.TestRunners.NUnit.csproj
@@ -89,16 +89,13 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="nunit.core, Version=2.5.9.10348, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="nunit.core">
       <HintPath>..\..\..\..\lib\NUnit\lib\nunit.core.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.core.interfaces, Version=2.5.9.10348, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="nunit.core.interfaces">
       <HintPath>..\..\..\..\lib\NUnit\lib\nunit.core.interfaces.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.util, Version=2.5.9.10348, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="nunit.util">
       <HintPath>..\..\..\..\lib\NUnit\lib\nunit.util.dll</HintPath>
     </Reference>
   </ItemGroup>
