Ready to move CT stuff inn now

--- a/src/AutoTest.Messages/AutoTest.Messages.csproj
+++ b/src/AutoTest.Messages/AutoTest.Messages.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Link.cs" />
     <Compile Include="ExternalCommandMessage.cs" />
     <Compile Include="EditorEngineMessage.cs" />
+    <Compile Include="Extensions\ObjectExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
