Refactored a bit and added recursive run detection support

--- a/src/AutoTest.Core/AutoTest.Core.csproj
+++ b/src/AutoTest.Core/AutoTest.Core.csproj
@@ -221,6 +221,8 @@
     <Compile Include="Processes\ProcessExtensions.cs" />
     <Compile Include="ForeignLanguageProviders\Php\PhpUnitLiveParser.cs" />
     <Compile Include="ForeignLanguageProviders\Php\PhpFileConventionMatcher.cs" />
+    <Compile Include="DebugLog\ConsoleWriter.cs" />
+    <Compile Include="Messaging\MessageConsumers\RecursiveRunCauseConsumer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
