Added pause resume and possibility to get engine state

--- a/src/AutoTest.Server/AutoTest.Server.csproj
+++ b/src/AutoTest.Server/AutoTest.Server.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Handlers\FocusHandler.cs" />
     <Compile Include="Handlers\RunItemHandler.cs" />
     <Compile Include="Handlers\StatusHandler.cs" />
+    <Compile Include="Handlers\EngineControlHandler.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
