--- a/addins/MonoDevelop/AutoTest.MDAddin/AutoTest.MDAddin.csproj
+++ b/addins/MonoDevelop/AutoTest.MDAddin/AutoTest.MDAddin.csproj
@@ -15,7 +15,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\..\..\..\..\.local\share\MonoDevelop-4.0\LocalInstall\Addins\AutoTest.MDAddin\</OutputPath>
-    <DefineConstants>DEBUG;MD_41</DefineConstants>
+    <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
